[tool.poetry]
name = "goss"
version = "0.3.0"
description = "Github Object Storage"
authors = ["wxnacy <wxnacy@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
goss="goss.cli.command:main"

[tool.poetry.dependencies]
python = "^3.7"
pyperclip = "^1.8.2"
wush = "^0.2.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
